[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/EndScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/art/backgrounds/end screen - toothbrush and arm.png" type="Texture" id=3]
[ext_resource path="res://assets/art/backgrounds/end screen - background person.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "EndScreen"
length = 11.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ScreenFlash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Labels/TopText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6.5, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Labels/BottomText:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 8.5, 11 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackgroundPerson:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EndScreen" type="Node"]
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.988235, 0.960784, 0.756863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPerson" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )
centered = false

[node name="Toothbrush" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenFlash" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TopText" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.5
margin_top = 8.0
margin_right = 86.5001
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "You found your toothbrush!"
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomText" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -40.0
margin_right = 171.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "But brushing your teeth without it went so well you might just keep using your fingers."
align = 1
valign = 1
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EndScreen = SubResource( 1 )
